# gnome-latam-workshop

./: .gitignore  Dockerfile  Makefile  README.md  build_with_docker.sh  meson.build
gnome-video-effects/: lattam.effect
gst/cheese/: gstcheesefilter.c  gstcheesefilter.cpp  gstcheesefilter.h  meson.build
